--- a/style.css
+++ b/style.css
@@ -215,9 +215,17 @@ header {
 .season {
   font-size: 25px
 }
+
+.about {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 .about h2{
   font-style: italic;
   text-align: center;
+  font-size: 25px;
+  font-family: "Playfair Display";
+
 }
 
 .about h2 span{
@@ -225,6 +233,11 @@ header {
   font-style: normal;
 }
 
+.about p {
+  margin: 10px;
+  line-height: 20px;
+  text-align: center;
+}
 .products {
  display: flex;
  flex-flow: row wrap;
@@ -234,71 +247,98 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px;
+  height: 150px;
   background-size: cover;
   background-position: center center;
 }
 
 .products div a {
   color: white;
+  text-decoration-line: none;
+  text-transform: uppercase;
+  font-size: 16px;
 }
 .menscat {
   background: url("images/mens-category.jpg");
   background-repeat: no-repeat;
   flex: 100%;
+  margin-bottom: 10px;
 }
 
 .trendscat {
   background: url("images/trends-category.jpg");
-  flex: 50%;
+  flex: 45%;
   background-repeat: no-repeat;
+  margin-right: 5px;
+  
 }
 
 .glassescat {
   background: url("images/glasses-category.jpg");
-  flex: 50%;
+  flex: 45%;
   background-repeat: no-repeat;
+  margin-left: 5px;
+  margin-bottom: 10px;
+
 }
 
 .salecat {
   background: url('images/sale-category.jpg');
   background-repeat: no-repeat;
-  flex: 50%;
+  flex: 45%;
+  margin-right: 5px;
 }
 
 .bagscat {
   background: url('images/bags-category.jpg');
   background-repeat: no-repeat;
-  flex: 50%;
+  flex: 45%;
+  margin-left: 5px;
 }
 
 .womenscat {
   background: url('images/womens-category.jpg');
   background-repeat: no-repeat;
   flex: 100%;
-  margin-bottom: 50px;
+  margin-top: 10px;
 }
 
 .featured {
   height: auto;
   text-align: center;
+  margin-top: 50px;
+  
+}
+
+.featured h4{
+  color: #e2574c
+}
+.featured p {
+  color: #969696;
+  text-transform: uppercase;
 }
 
 .newsletter {
   background: url("images/wave-bkgd.jpg") no-repeat bottom;
-  height: 400px;
+  height: 300px;
   text-align: center;
   margin-top: 90px;
 }
 .newscontainer {
- padding-top: 150px;
- padding-bottom: 150px;
  color: white;
+ padding-top: 80px
+
 }
 
 .newscontainer h1 {
   font-style: italic;
   font-size: 30px;
+  font-family: "Playfair Display";
+}
+
+.newscontainer p {
+  margin: 10px;
+  line-height: 20px
 }
 
 .newscontainer h1 span{
@@ -316,7 +356,7 @@ header {
   position: absolute;
   right: 30px;
   color: white;
-  background-color: red;
+  background-color:#e2574c;
   border-radius: 50px;
   height: 45px;
   width: 85px
@@ -327,8 +367,19 @@ footer {
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   height: 200px;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+footer p {
+  margin: 10px
+}
+
+.footer-container p {
+  display: none
 }
 
 @media (min-width: 600px) {
@@ -346,6 +397,20 @@ footer {
     height: 800px;
 
 }
+
+.menscat {
+  flex: 50%
+}
+.trendscat {
+  flex: 25%
+}
+.glassescat {
+  flex: 25%
+}
+
+.footer-container p {
+  display: inline
+}
 }
 
 @media (min-width: 1240px) {
@@ -356,4 +421,5 @@ footer {
   .main-navigation {
     border: none
   }
+
 }
